--- a/landing.html
+++ b/landing.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -13,9 +11,7 @@
   <link rel="stylesheet" href="./assets/css/styles.css"/>
   <title>Curio City</title>
 </head>
-
 <body>
-
   <!-- Navbar Code -->
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
@@ -29,51 +25,33 @@
     </div>
   </nav>
   <div class="b-example-divider"></div>
-
   <!-- Hero Section -->
-  <section class="px-4 py-5 mt-5 text-center hero-section">
-    <!-- Top Card -->
-    <div class="row">
-      <div class="col-12">
-        <div id="description" class="card m-3"></div>
-      </div>
-    </div>
-  
-    <!-- Bottom Cards -->
-    <div class="row">
-      <div class="col-md-4">
-        <div id="weather" class="card m-3">
+  <section class="px-4 py-5 mt-5 text-center">
+    <div class="d-flex flex-row">
+      <div class="card w-25">
+        <div id="image-city"></div>
+        <div id="weather" class="card">
           <div class="card-body">
             <div id="today"></div>
           </div>
         </div>
       </div>
-  
-      <div class="col-md-4">
-        <div id="image-city" class="card m-3"></div>
-      </div>
-  
-      <div class="col-md-4">
+      <div class="card w-75 mainCard">
+        <div id="description" class="card m-3"></div>
         <div id="currency-exchange" class="card m-3"></div>
-        
       </div>
     </div>
   </section>
-
-<!-- Section with movies and food cards -->
-<section class="px-4">
-  <div class="row">
-
-    <div class="col-md-6">
-      <div id="food" class="card">
-        <!-- Food content goes here -->
+  <!-- Section with movies and food cards -->
+  <section class="px-4">
+    <div class="d-flex flex-row">
+      <div class="card w-50 me-4">
+        <div id="food" class="card-body">
+        </div>
       </div>
-    </div>
-
-    <div class="col-md-6">
-      <div class="card movies-card">
+      <div class="card w-50 movies-card">
         <div class="card-body">
-          <h5 class="card-title">Movies that are popular in your city!</h5>
+          <h5 class="card-title">Movies</h5>
           <div id="carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -81,7 +59,6 @@
               <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div id="movies" class="carousel-inner">
-              <!-- Movie carousel content goes here -->
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -89,38 +66,57 @@
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class "visually-hidden">Next</span>
+              <span class="visually-hidden">Next</span>
             </button>
           </div>
         </div>
       </div>
     </div>
-
-  </div>
-</section>
-
-
-<!-- Footer -->
-<footer class="py-5">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-12 text-center mb-3">
-        <p class="text-muted small">© 2024 CurioCity, Inc. All rights reserved.</p>
+  </section>
+  <!-- Footer -->
+  <footer class="py-5">
+    <div class="container">
+    <div class="row">
+      <div class="col-6 col-md-2 mb-3">
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contact</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+        </ul>
       </div>
-      <div class="col-12 text-center">
-        <!-- GitHub Links -->
-        <a href="https://github.com/Contributor1" class="me-2">Contributor 1</a>
-        <a href="https://github.com/Contributor2" class="me-2">Contributor 2</a>
-        <a href="https://github.com/Contributor3" class="me-2">Contributor 3</a>
-        <a href="https://github.com/Contributor4" class="me-2">Contributor 4</a>
-        <a href="https://github.com/Contributor5" class="me-2">Contributor 5</a>
+      <div class="col-6 col-md-2 mb-3">
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Careers</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+        </ul>
+      </div>
+      <div class="col-md-5 offset-md-1 mb-3">
+        <form>
+          <h5>Subscribe to our newsletter</h5>
+          <p>Monthly digest of what's new and exciting from us.</p>
+          <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+            <label for="newsletter1" class="visually-hidden">Email address</label>
+            <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+            <button class="sign-up" type="button">Subscribe</button>
+          </div>
+        </form>
       </div>
     </div>
-  </div>
-</footer>
-
-
-
+    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+      <p>© 2023 CurioCity, Inc. All rights reserved.</p>
+      <ul class="list-unstyled d-flex">
+        <li class="ms-3"><a class="link-dark" href="#"><i class="fa-brands fa-twitter"></i></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+      </ul>
+    </div>
+</div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -128,13 +124,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-
   <script src="./assets/js/script.js"></script>
-  <script src="./assets/js/description.js"></script>
   <script src="./assets/js/weather.js"></script>
   <script src="./assets/js/currency_exchange.js"></script>
+  <script src="./assets/js/description.js"></script>
   <script src="./assets/js/flickr.js"></script>
   <script src="./assets/js/movies.js"></script>
   <script src="./assets/js/edamam.js"></script>
-
 </body>
