--- a/landing.html
+++ b/landing.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -53,8 +54,8 @@
         </div>
       </div>
       <div class="card w-75 mainCard">
-        <div id="description" class="card m-3 px-4"></div>
-        <div id="currency-exchange" class="card m-3 px-4"></div>
+        <div id="description" class="card m-3 px-4 card-body"></div>
+        <div id="currency-exchange" class="card m-3 px-4 card-body"></div>
       </div>
     </div>
   </section>
@@ -66,7 +67,7 @@
       </div>
       <div class="card w-50 movies-card movies">
         <div class="card-body">
-          <h5 class="card-title">Movies</h5>
+          <h5 class="card-title">Trending movies for your City!</h5>
           <div id="carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true"
