--- a/landing.html
+++ b/landing.html
@@ -29,7 +29,7 @@
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            Pages
+            Cards
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#weather">Weather</a>
@@ -43,7 +43,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="px-4 py-5 mt-5 text-center">
+  <section class="px-4 py-5 mt-5 mb-3 text-center">
     <div class="d-flex flex-row">
       <div class="card w-25">
         <div id="image-city"></div>
@@ -60,14 +60,14 @@
     </div>
   </section>
   <!-- Section with movies and food cards -->
-  <section class="px-4">
+  <section class="px-4 mb-3">
     <div class="d-flex flex-row">
       <div class="card w-50 me-4">
         <div id="food" class="card-body"></div>
       </div>
       <div class="card w-50 movies-card movies">
         <div class="card-body">
-          <h5 class="card-title">Trending movies for your City!</h5>
+          <h5 class="card-title">Trending movies in your City!</h5>
           <div id="carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true"
@@ -91,7 +91,7 @@
     </div>
   </section>
   <!-- Footer -->
-  <footer class="py-5">
+  <footer class="py-2">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 text-center mb-3">
