--- a/landing.html
+++ b/landing.html
@@ -17,7 +17,7 @@
 <body>
   <!-- Navbar Code -->
   <nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container-fluid">
+    <div class="container-fluid navbar-content">
       <a class="landing-logo" href="index.html">
         <img src="./assets/img/logo.png" alt="logo" width="60" class="landing-logo">
       </a>
