--- a/landing.html
+++ b/landing.html
@@ -41,7 +41,7 @@
       </div>
   </nav>
   <!-- Hero Section -->
-  <section class="px-4 py-5 mt-5 mb-3 text-center">
+  <section class="px-4 py-5 mb-3 text-center">
     <div class="d-flex flex-row">
       <div class="card w-25">
         <div id="image-city"></div>
@@ -90,7 +90,7 @@
   </section>
   <!-- Footer -->
   <footer class="py-2">
-    <div class="container">
+    <div class="footer-container">
       <div class="row justify-content-center">
         <div class="col-12 text-center mb-1">
           <p class="text-muted small">© 2024 CurioCity, Inc. All rights reserved.</p>
